--- a/index.html
+++ b/index.html
@@ -29,7 +29,32 @@
                         <tr><td>3. Folleto de Inkscape y visual Studio Code</td></tr>
                         <tr><td>4. 5 paginas webo</td></tr>
                     </table>
-                </p> 
+     </p> 
         </p>
+        <footer class="pie de pagina">
+            <p>
+                <table>
+                    <tr><td>presentado por: Hansel Guerrero</td></tr>
+                    <tr><td>Modulo: Produccion Multimedial</td></tr>
+                    <tr><td>Profesor: </td></tr>
+                    <tr><td>istitucion: Universidad de Barranquilla</td></tr>
+                </table>
+            
+            </p> 
+         </p>
+       <footer>
+            <p class="pie">
+                <table>
+                    <tr><td>presentado por: Hansel Guerrero</td></tr>
+                    <tr><td>Modulo: Produccion Multimedial</td></tr>
+                    <tr><td>Profesor: </td></tr>
+                    <tr><td>istitucion: Universidad de Barranquilla</td></tr>
+                </table>
+            </p>
+           <p>
+                        <center><h3>><Video</h3></Video></center>
+                        <center><iframe width="300" height="250" src="https://app.animaker.com/animo/HrV82fCjYOeKdWVE/" title="ANIMAKER" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
+                        </p>
+        </footer>
 </body>
 </html>                                                                                                               
